--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "browser-sync": "2.26.14",
     "eslint": "7.18.0",
-    "eslint-config-htmlacademy": "2.0.0"
+    "eslint-config-htmlacademy": "2.0.0",
+    "webpack": "5.28.0",
+    "webpack-cli": "4.6.0"
   },
   "license": "MIT",
   "dependencies": {
@@ -21,11 +23,14 @@
     "nouislider": "^14.6.3"
   },
   "scripts": {
-    "start": "browser-sync start --server --no-ui --files \"js/**/*.js\"",
-    "test": "eslint js/"
+    "start": "browser-sync start --server \"build/\" --no-ui --files \"source/**/*.js\"",
+    "test": "eslint source/js/",
+    "build": "webpack --mode production"
   },
   "engines": {
     "node": ">=12.0.0"
   },
   "type": "module"
 }
+
+
