webpackdone, add error message if cant get data, add download random photo from computer

--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "nouislider": "^14.6.3"
   },
   "scripts": {
+    "build": "webpack --mode production",
     "start": "browser-sync start --server \"build/\" --no-ui --files \"source/**/*.js\"",
     "test": "eslint source/js/",
-    "build": "webpack --mode production"
+    "restart": "npm run build && npm start"
   },
   "engines": {
     "node": ">=12.0.0"
-  },
-  "type": "module"
+  }
 }
 
 
