--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "lodash.random": "^3.2.0",
-    "nouislider": "^14.6.3"
+    "lodash.random": "3.2.0",
+    "nouislider": "14.6.3"
   },
   "scripts": {
     "build": "webpack --mode production",
